--- a/app/src/main/res/anim/slide_up.xml
+++ b/app/src/main/res/anim/slide_up.xml
@@ -3,12 +3,14 @@
     android:fillAfter="true">
 
     <translate
-        android:fromYDelta="100%"
+        android:fromYDelta="50%"
         android:toYDelta="0%"
-        android:duration="800" />
+        android:duration="800"
+        android:interpolator="@android:anim/accelerate_decelerate_interpolator" />
 
     <alpha
         android:fromAlpha="0.0"
         android:toAlpha="1.0"
-        android:duration="800" />
+        android:duration="800"
+        android:interpolator="@android:anim/accelerate_decelerate_interpolator" />
 </set>
