--- a/app/src/main/res/drawable/card_neon_background.xml
+++ b/app/src/main/res/drawable/card_neon_background.xml
@@ -5,14 +5,14 @@
             <item>
                 <shape android:shape="rectangle">
                     <corners android:radius="12dp" />
-                    <solid android:color="@color/neon_blue" />
+                    <solid android:color="@color/primary_green" />
                     <padding android:bottom="4dp" android:left="4dp" android:right="4dp" android:top="4dp" />
                 </shape>
             </item>
             <item>
                 <shape android:shape="rectangle">
                     <corners android:radius="8dp" />
-                    <solid android:color="@color/dark_surface" />
+                    <solid android:color="@color/card_background" />
                 </shape>
             </item>
         </layer-list>
@@ -22,14 +22,14 @@
             <item>
                 <shape android:shape="rectangle">
                     <corners android:radius="12dp" />
-                    <solid android:color="@color/neon_blue" />
+                    <solid android:color="@color/primary_green" />
                     <padding android:bottom="2dp" android:left="2dp" android:right="2dp" android:top="2dp" />
                 </shape>
             </item>
             <item>
                 <shape android:shape="rectangle">
                     <corners android:radius="10dp" />
-                    <solid android:color="@color/dark_surface" />
+                    <solid android:color="@color/card_background" />
                 </shape>
             </item>
         </layer-list>
