--- a/app/src/main/res/drawable/gradient_overlay.xml
+++ b/app/src/main/res/drawable/gradient_overlay.xml
@@ -1,7 +1,9 @@
+<?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
-        android:startColor="#00000000"
-        android:centerColor="#40000000"
-        android:endColor="#80000000"
-        android:angle="270" />
+        android:angle="90"
+        android:startColor="@color/transparent"
+        android:centerColor="@color/overlay_dark"
+        android:endColor="@color/background_black"
+        android:type="linear" />
 </shape>
