--- a/app/src/main/res/drawable/ic_empty_library.xml
+++ b/app/src/main/res/drawable/ic_empty_library.xml
@@ -1,16 +1,13 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="80dp"
-    android:height="80dp"
+    android:width="24dp"
+    android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24"
-    android:tint="@color/neon_blue">
+    android:tint="?attr/colorPrimary">
     <path
-        android:fillColor="@color/neon_blue"
-        android:pathData="M4,6H2v14c0,1.1 0.9,2 2,2h14v-2H4V6z"/>
+        android:fillColor="@android:color/white"
+        android:pathData="M4,6L2,6v14c0,1.1 0.9,2 2,2h14v-2L4,20L4,6zM20,2L8,2c-1.1,0 -2,0.9 -2,2v12c0,1.1 0.9,2 2,2h12c1.1,0 2,-0.9 2,-2L22,4c0,-1.1 -0.9,-2 -2,-2zM20,16L8,16L8,4h12v12z"/>
     <path
-        android:fillColor="@color/neon_blue"
-        android:pathData="M20,2H8C6.9,2 6,2.9 6,4v12c0,1.1 0.9,2 2,2h12c1.1,0 2,-0.9 2,-2V4C22,2.9 21.1,2 20,2zM20,16H8V4h12V16z"/>
-    <path
-        android:fillColor="@color/neon_blue"
-        android:pathData="M12,5.5v6l4.5,-3z"/>
+        android:fillColor="@android:color/white"
+        android:pathData="M12,5.5v6l2.5,-1.5 2.5,1.5v-6z"/>
 </vector>
