--- a/app/src/main/res/drawable/neon_gradient_background.xml
+++ b/app/src/main/res/drawable/neon_gradient_background.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:startColor="@color/dark_background"
-        android:centerColor="@color/dark_background"
-        android:endColor="@color/darker_background"
+        android:startColor="@color/background_dark"
+        android:centerColor="@color/background_dark"
+        android:endColor="@color/background_dark"
         android:angle="270" />
 </shape>
