--- a/app/src/main/res/drawable/neon_pink_button_background.xml
+++ b/app/src/main/res/drawable/neon_pink_button_background.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="@color/neon_pink">
+    android:color="@color/accent_orange">
     <item>
         <shape android:shape="rectangle">
             <corners android:radius="24dp" />
-            <solid android:color="@color/dark_surface" />
-            <stroke android:color="@color/neon_pink"
+            <solid android:color="@color/card_background" />
+            <stroke android:color="@color/accent_orange"
                 android:width="2dp" />
         </shape>
     </item>
