--- a/app/src/main/res/drawable/bg_rounded_counter.xml
+++ b/app/src/main/res/drawable/bg_rounded_counter.xml
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- Crea este archivo en app/src/main/res/drawable/bg_rounded_counter.xml -->
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <!-- Fondo oscuro con transparencia -->
-    <solid android:color="@color/overlay_dark" />
+    <solid android:color="@color/semi_transparent" />
 
-    <!-- Borde verde neón -->
+    <corners android:radius="12dp" />
+
     <stroke
         android:width="1dp"
         android:color="@color/primary_green" />
-
-    <!-- Esquinas redondeadas -->
-    <corners android:radius="12dp" />
 
 </shape>
