--- a/app/src/main/res/drawable/bg_rounded_counter.xml
+++ b/app/src/main/res/drawable/bg_rounded_counter.xml
@@ -1,14 +1,8 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!-- Crea este archivo en app/src/main/res/drawable/bg_rounded_counter.xml -->
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-
-    <solid android:color="@color/semi_transparent" />
-
+    <solid android:color="@color/semi_transparent_black" />
     <corners android:radius="12dp" />
-
     <stroke
         android:width="1dp"
         android:color="@color/primary_green" />
-
 </shape>
