--- a/app/src/main/res/drawable/gradient_overlay.xml
+++ b/app/src/main/res/drawable/gradient_overlay.xml
@@ -1,9 +1,7 @@
-<?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
     <gradient
         android:angle="90"
-        android:startColor="@color/transparent"
-        android:centerColor="@color/overlay_dark"
-        android:endColor="@color/background_black"
-        android:type="linear" />
+        android:startColor="@android:color/transparent"
+        android:endColor="@color/semi_transparent_black" />
 </shape>
