--- a/app/src/main/res/drawable/stats_item_background.xml
+++ b/app/src/main/res/drawable/stats_item_background.xml
@@ -1,16 +1,8 @@
-<?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-
-    <!-- Fondo de superficie oscura -->
-    <solid android:color="@color/surface_dark" />
-
-    <!-- Borde sutil -->
+    <solid android:color="@color/card_background" />
+    <corners android:radius="8dp" />
     <stroke
         android:width="1dp"
-        android:color="@color/border_color" />
-
-    <!-- Esquinas redondeadas -->
-    <corners android:radius="8dp" />
-
+        android:color="@color/primary_green" />
 </shape>
