--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -16,7 +16,7 @@
         android:layout_height="120dp"
         android:layout_marginBottom="32dp"
         android:contentDescription="@string/app_name"
-        android:src="@mipmap/ic_launcher_round"
+        android:src="@drawable/logosinfondo"
         app:layout_constraintBottom_toTopOf="@+id/title_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
